* 自动获取 dx 命令的路径