@@ -7,8 +7,6 @@
  *
  * 要求:
  * 1.正确配置的`java`环境
- * 2.可直接在`命令行(cmd)`运行`dx`命令, `dx`命令配置如下:
- * 请将"{AndroidSDK}\build-tools\{任意版本}\" 路径添加到windows的PATH环境变量中
  *
  * 注意:
  * 如果使用JDK9和以上版本, 出现以下错误:
@@ -18,6 +16,11 @@
  * Error: A fatal exception has occurred. Program will exit.
  *
  * 请参考: https://www.jianshu.com/p/77db2ea8098f
+ *
+ * 修改方法,将 [dx.bat] 文件的最后一行:
+ * call "%java_exe%" %javaOpts% -Djava.ext.dirs="%frameworkdir%" -jar "%jarpath%" %params%
+ * 改成:
+ * call "%java_exe%" %javaOpts% --class-path="%frameworkdir%" -jar "%jarpath%" %params%
  *
  * @author angcyo* @date 2019/09/06
  * Copyright (c) 2019 ShenZhen O&M Cloud Co., Ltd. All rights reserved.
@@ -131,7 +134,27 @@ task jarToDex(dependsOn: ['makeJar'], type: Exec) {
     //借助windows的cmd命令行执行
     commandLine 'cmd'
 
+    def _local = 'local.properties'
+    def _sdk = 'sdk.dir'
+
+    Properties properties = new Properties()
+    File local = new File(rootDir, _local)
+    if (!local.exists()) {
+        throw new IllegalArgumentException("[$_local]配置文件不存在.")
+    }
+
+    properties.load(local.newInputStream())
+
+    def sdkDir = properties.getProperty(_sdk)
+
+    if (sdkDir == null) {
+        throw new IllegalArgumentException("sdk 路径未找到.请检查[$_local]中的[$_sdk]属性.")
+    }
+
+    def dxPath = "$sdkDir/build-tools/$android.buildToolsVersion/dx.bat"
+
     doFirst {
+
         //jar文件对象
         def srcFile = file(dexConfig.jarPath)
         //需要生成的dex文件对象
@@ -147,7 +170,7 @@ task jarToDex(dependsOn: ['makeJar'], type: Exec) {
         //拼接dx.bat执行的参数
         def list = []
         list.add("/c")
-        list.add("dx")
+        list.add(dxPath)
         list.add("--dex")
         list.add("--output")
         list.add(desFile)
